--- a/riff-raff.yaml
+++ b/riff-raff.yaml
@@ -2,6 +2,14 @@ stacks: [membership]
 regions: [eu-west-1]
 
 deployments:
+  cfn:
+    type: cloud-formation
+    parameters:
+      templatePath: cfn.yaml
+      cloudFormationStackName: salesforce-message-handler
+      cloudFormationStackByTags: false
+      prependStackToCloudFormationStackName: false
+      createStackIfAbsent: false  
   salesforce-message-handler:
     type: aws-lambda
     parameters:
