--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -1,18 +1,14 @@
-# This action runs snyk monitor on every push to main
-name: Snyk
+# This action is just a test
+name: Snyk (test)
 
-on:
-  push:
-    branches:
-      - master
-  workflow_dispatch:
+on: push
 
 jobs:
   security:
     uses: guardian/.github/.github/workflows/sbt-node-snyk.yml@main
     with:
       DEBUG: true
-      ORG: the-guardian-cuu
+      ORG: guardian-test
       SKIP_NODE: true
     secrets:
        SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
