--- a/riff-raff.yaml
+++ b/riff-raff.yaml
@@ -13,7 +13,7 @@ deployments:
   salesforce-message-handler:
     type: aws-lambda
     parameters:
-      bucket: membership-dist
+      bucketSsmLookup: true
       functionNames: [salesforce-message-handler-]
       fileName: salesforce-message-handler.jar
       prefixStack: false
