--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,16 +34,16 @@ jobs:
           java-version: '11'
           cache: 'sbt'
 
-      - name: Compile and package project
-        run: sbt clean assembly
+      - name: riffRaffUpload
+        run: sbt clean riffRaffUpload
 
-      - name: Upload to Riff-Raff
-        uses: guardian/actions-riff-raff@v2
-        with:
-          app: salesforce-message-handler
-          configPath: ./riff-raff.yaml
-          contentDirectories: |
-            cfn:
-              - ./cfn.yaml
-            salesforce-message-handler:
-              - ./salesforce-message-handler.jar
+#      - name: Upload to Riff-Raff
+#        uses: guardian/actions-riff-raff@v2
+#        with:
+#          app: salesforce-message-handler
+#          configPath: ./riff-raff.yaml
+#          contentDirectories: |
+#            cfn:
+#              - ./cfn.yaml
+#            salesforce-message-handler:
+#              - ./salesforce-message-handler.jar
