--- a/cfn.yaml
+++ b/cfn.yaml
@@ -78,7 +78,7 @@ Resources:
       Handler: com.gu.salesforce.messageHandler.Lambda::handleRequest
       MemorySize: 1536
       Role: !GetAtt ExecutionRole.Arn
-      Runtime: java8.al2
+      Runtime: java21
       Timeout: 300
 
   MessageHandlerApiPermission:
