--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
       id-token: write
       contents: read
     name: salesforce-message-handler build
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - name: Env
         run: env
@@ -30,9 +30,9 @@ jobs:
       - name: Setup Java
         uses: actions/setup-java@v4
         with:
-          distribution: 'corretto'
-          java-version: '21'
-          cache: 'sbt'
+          distribution: "corretto"
+          java-version: "21"
+          cache: "sbt"
 
       - name: Compile and package project
         run: sbt 'set test in assembly := {}' clean assembly
